<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_more_vertical"
        android:title="@string/action_sort_by"
        app:showAsAction="ifRoom">

        <menu>

            <group
                android:id="@+id/main_menu_group">
                <item
                    android:id="@+id/action_search"
                    android:title="@string/action_search_movies"
                    android:orderInCategory="4"
                    app:actionViewClass="android.support.v7.widget.SearchView"
                    app:showAsAction="collapseActionView|ifRoom">
                </item>
            </group>

            <item
                android:id="@+id/action_top_rated"
                android:orderInCategory="1"
                android:title="@string/action_top_rated"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_popular"
                android:orderInCategory="2"
                android:title="@string/action_popular"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_upcoming"
                android:orderInCategory="3"
                android:title="@string/action_upcoming"
                app:showAsAction="never"/>
        </menu>

    </item>

</menu>

