<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.johneas.android.movie.view.movies.detail.MoviesDetailViewModel"/>

        <variable
            name="presenter"
            type="com.johneas.android.movie.view.movies.detail.MovieDetailPresenter"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/detail_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/detail_movie_poster_iv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_movie_poster_iv_height"
                    android:contentDescription="@string/movie_poster_iv_content_desc"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:imageUrl="@{viewModel.posterUrl}"
                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/movie_detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:title="@string/app_name"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:layout_gravity="fill_vertical"
            android:layout_marginBottom="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardMaxElevation="@dimen/cardview_default_elevation"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/detail_label_margin_left"
                            android:layout_marginTop="@dimen/detail_label_margin_top"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/movie_ratings_label"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/movie_release_date_label"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/detail_label_margin_left"
                            android:layout_marginTop="@dimen/detail_label_margin_top"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/movie_synopsis_label"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/detail_movie_info_top_margin"
                            android:orientation="horizontal">

                            <RatingBar
                                android:id="@+id/movie_vote_average_rb"
                                style="?android:ratingBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:rating="@{viewModel.ratingValue}"
                                android:numStars="5"/>

                            <TextView
                                android:id="@+id/movie_vote_count_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.ratingQuantity}"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/movie_release_date_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/detail_movie_info_top_margin"
                            android:fontFamily="sans-serif"
                            android:text="@{viewModel.releaseDate}"/>
                        <TextView
                            android:id="@+id/movie_plot_synopsis_tv"
                            style="?android:textAppearanceMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/detail_movie_info_top_margin"
                            android:fontFamily="sans-serif-condensed"
                            android:scrollbars="vertical"
                            android:text="@{viewModel.synopsis}"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
